@@ -1,5 +1,11 @@
 2005-02-15  Jan Beulich  <jbeulich@novell.com>
 
+	* config/tc-ia64.h (ia64_symbol_chars): Declare.
+	(ty_symbol_chars): Define.
+	* config/tc-ia64.c (ia64_symbol_chars): Define.
+
+2005-02-15  Jan Beulich  <jbeulich@novell.com>
+
 	* config/tc-ia64.c (ia64_parse_name): Only update next character if
 	input_line_pointer was advanced.
 
